Fixed layouts so sidebar only shows up on main page Changed style sheet to show scroll bars on too wide code (white-space) Finished up Hatta post

--- a/_sass/styles.sass
+++ b/_sass/styles.sass
@@ -51,10 +51,9 @@
         :padding 0.4em
         :margin 20px 10px
         :overflow-x auto
-        word-wrap: break-word
-        :white-space pre-wrap
-        :white-space -moz-pre-wrap
-        :white-space -pre-wrap
+/        :white-space pre-wrap
+/        :white-space -moz-pre-wrap
+/        :white-space -pre-wrap
     a
         :text-decoration underline
     hr
